src/main/java/com/example/chuchu/common/errors/exception/UserNotFoundException.java
package com.example.chuchu.common.errors.exception;

public class UserNotFoundException extends RuntimeException {

    public UserNotFoundException(String message) {
        super(message);
    }

    public UserNotFoundException(String message, Throwable cause) {
        super(message, cause);
    }
}
